--- a/tools/harden-controller/index.html
+++ b/tools/harden-controller/index.html
@@ -397,6 +397,30 @@
 
     .selection-btn .ctrl-name { font-family: monospace; font-weight: 600; }
     .selection-btn .ctrl-path { font-size: 0.75rem; color: var(--text-muted); }
+
+    .risk-badge {
+      font-size: 0.7rem;
+      padding: 0.15rem 0.5rem;
+      border-radius: 3px;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 0.04em;
+      display: inline-block;
+    }
+    .risk-badge.risk-high { background: #f8717133; color: var(--red); }
+    .risk-badge.risk-medium { background: #fb923c33; color: var(--orange); }
+    .risk-badge.risk-low { background: #fbbf2433; color: var(--yellow); }
+
+    .finding-counts { font-size: 0.75rem; font-weight: 600; font-family: monospace; }
+    .finding-counts .fc-high { color: var(--red); }
+    .finding-counts .fc-medium { color: var(--orange); }
+    .finding-counts .fc-low { color: var(--yellow); }
+
+    .phase-indicators { font-size: 0.75rem; display: inline-flex; gap: 0.6rem; }
+    .phase-indicators .phase-done { color: var(--green); }
+    .phase-indicators .phase-pending { color: var(--text-muted); opacity: 0.5; }
+
+    .stale-warning { font-size: 0.75rem; color: var(--orange); font-weight: 600; }
   </style>
 </head>
 <body>
@@ -600,6 +624,29 @@
       `;
     }
 
+    function renderFindingCounts(counts) {
+      if (!counts) return '';
+      const parts = [];
+      if (counts.high)   parts.push(`<span class="fc-high">${counts.high}H</span>`);
+      if (counts.medium) parts.push(`<span class="fc-medium">${counts.medium}M</span>`);
+      if (counts.low)    parts.push(`<span class="fc-low">${counts.low}L</span>`);
+      return parts.length ? `<span class="finding-counts">${parts.join(' ')}</span>` : '';
+    }
+
+    function renderPhaseIndicators(phases) {
+      if (!phases) return '';
+      const items = [
+        { key: 'analyzed',  label: 'analyzed' },
+        { key: 'hardened',  label: 'hardened' },
+        { key: 'verified',  label: 'verified' },
+      ];
+      return `<span class="phase-indicators">${items.map(i =>
+        phases[i.key]
+          ? `<span class="phase-done">✓ ${i.label}</span>`
+          : `<span class="phase-pending">○ ${i.label}</span>`
+      ).join('')}</span>`;
+    }
+
     function renderSelectionPanel() {
       const controllers = pipeline.controllers || [];
       return `
@@ -607,16 +654,32 @@
           <h3>Select a controller to harden</h3>
           <div class="selection-list">
             ${controllers.map(c => {
+              const displayName = c.name.replace(/_controller$/, '');
+
               if (c.existing_analysis_at) {
+                const riskBadge = c.overall_risk
+                  ? `<span class="risk-badge risk-${c.overall_risk}">${c.overall_risk}</span>`
+                  : '';
                 const age = formatAge(c.existing_analysis_at);
+                const isStale = c.stale === true;
+
                 return `
                   <div class="selection-btn" style="cursor:default; flex-direction:column; align-items:stretch; gap:0.5rem;">
                     <div style="display:flex; justify-content:space-between; align-items:center;">
-                      <span class="ctrl-name">${c.name.replace(/_controller$/, '')}</span>
+                      <span style="display:flex; align-items:center; gap:0.5rem;">
+                        ${riskBadge}
+                        <span class="ctrl-name">${displayName}</span>
+                      </span>
                       <span class="ctrl-path">${c.path}</span>
                     </div>
+                    <div style="display:flex; justify-content:space-between; align-items:center;">
+                      ${renderFindingCounts(c.finding_counts)}
+                      ${renderPhaseIndicators(c.phases)}
+                    </div>
                     <div style="display:flex; justify-content:space-between; align-items:center; gap:0.5rem;">
-                      <span style="font-size:0.75rem; color:var(--text-muted);">analysis from ${age}</span>
+                      ${isStale
+                        ? '<span class="stale-warning">⚠ Analysis is stale</span>'
+                        : `<span style="font-size:0.75rem; color:var(--text-muted);">analyzed ${age}</span>`}
                       <span style="display:flex; gap:0.4rem;">
                         <button class="primary" onclick="loadExistingAnalysis('${c.name}')" style="font-size:0.8rem; padding:0.3rem 0.7rem;">
                           Use Existing
@@ -629,9 +692,10 @@
                   </div>
                 `;
               }
+
               return `
                 <button class="selection-btn" onclick="analyzeController('${c.name}')">
-                  <span class="ctrl-name">${c.name.replace(/_controller$/, '')}</span>
+                  <span class="ctrl-name">${displayName}</span>
                   <span class="ctrl-path">${c.path}</span>
                 </button>
               `;
