--- a/tools/harden-controller/index.html
+++ b/tools/harden-controller/index.html
@@ -647,61 +647,88 @@
       ).join('')}</span>`;
     }
 
+    function getModule(controllerPath) {
+      const parts = controllerPath.split('/');
+      const ctrlIdx = parts.indexOf('controllers');
+      if (ctrlIdx < 0 || ctrlIdx >= parts.length - 2) return null;
+      return parts.slice(ctrlIdx + 1, parts.length - 1).join('/');
+    }
+
     function renderSelectionPanel() {
       const controllers = pipeline.controllers || [];
+      const grouped = {};
+      controllers.forEach(c => {
+        const mod = getModule(c.path) || '_root';
+        (grouped[mod] = grouped[mod] || []).push(c);
+      });
+      const sortedModules = Object.keys(grouped).sort((a, b) => {
+        if (a === '_root') return 1;
+        if (b === '_root') return -1;
+        return a.localeCompare(b);
+      });
+
       return `
         <div class="selection-panel">
           <h3>Select a controller to harden</h3>
-          <div class="selection-list">
-            ${controllers.map(c => {
-              const displayName = c.name.replace(/_controller$/, '');
-
-              if (c.existing_analysis_at) {
-                const riskBadge = c.overall_risk
-                  ? `<span class="risk-badge risk-${c.overall_risk}">${c.overall_risk}</span>`
-                  : '';
-                const age = formatAge(c.existing_analysis_at);
-                const isStale = c.stale === true;
-
-                return `
-                  <div class="selection-btn" style="cursor:default; flex-direction:column; align-items:stretch; gap:0.5rem;">
-                    <div style="display:flex; justify-content:space-between; align-items:center;">
-                      <span style="display:flex; align-items:center; gap:0.5rem;">
-                        ${riskBadge}
-                        <span class="ctrl-name">${displayName}</span>
-                      </span>
-                      <span class="ctrl-path">${c.path}</span>
-                    </div>
-                    <div style="display:flex; justify-content:space-between; align-items:center;">
-                      ${renderFindingCounts(c.finding_counts)}
-                      ${renderPhaseIndicators(c.phases)}
-                    </div>
-                    <div style="display:flex; justify-content:space-between; align-items:center; gap:0.5rem;">
-                      ${isStale
-                        ? '<span class="stale-warning">⚠ Analysis is stale</span>'
-                        : `<span style="font-size:0.75rem; color:var(--text-muted);">analyzed ${age}</span>`}
-                      <span style="display:flex; gap:0.4rem;">
-                        <button class="primary" onclick="loadExistingAnalysis('${c.name}')" style="font-size:0.8rem; padding:0.3rem 0.7rem;">
-                          Use Existing
-                        </button>
-                        <button onclick="analyzeController('${c.name}')" style="font-size:0.8rem; padding:0.3rem 0.7rem;">
-                          Re-analyze
-                        </button>
-                      </span>
-                    </div>
-                  </div>
-                `;
-              }
-
-              return `
-                <button class="selection-btn" onclick="analyzeController('${c.name}')">
-                  <span class="ctrl-name">${displayName}</span>
-                  <span class="ctrl-path">${c.path}</span>
-                </button>
-              `;
-            }).join('')}
-          </div>
+          ${sortedModules.map(mod => `
+            <div style="margin-top:0.8rem;">
+              <div style="font-size:0.75rem; font-weight:600; color:var(--text-muted); text-transform:uppercase; letter-spacing:0.05em; margin-bottom:0.4rem;">
+                ${mod === '_root' ? 'Application' : mod.replace(/\//g, '::')}
+              </div>
+              <div class="selection-list">
+                ${grouped[mod].map(c => renderSelectionItem(c)).join('')}
+              </div>
+            </div>
+          `).join('')}
         </div>
+      `;
+    }
+
+    function renderSelectionItem(c) {
+      const displayName = c.name.replace(/_controller$/, '');
+
+      if (c.existing_analysis_at) {
+        const riskBadge = c.overall_risk
+          ? `<span class="risk-badge risk-${c.overall_risk}">${c.overall_risk}</span>`
+          : '';
+        const age = formatAge(c.existing_analysis_at);
+        const isStale = c.stale === true;
+
+        return `
+          <div class="selection-btn" style="cursor:default; flex-direction:column; align-items:stretch; gap:0.5rem;">
+            <div style="display:flex; justify-content:space-between; align-items:center;">
+              <span style="display:flex; align-items:center; gap:0.5rem;">
+                ${riskBadge}
+                <span class="ctrl-name">${displayName}</span>
+              </span>
+              <span class="ctrl-path">${c.path}</span>
+            </div>
+            <div style="display:flex; justify-content:space-between; align-items:center;">
+              ${renderFindingCounts(c.finding_counts)}
+              ${renderPhaseIndicators(c.phases)}
+            </div>
+            <div style="display:flex; justify-content:space-between; align-items:center; gap:0.5rem;">
+              ${isStale
+                ? '<span class="stale-warning">⚠ Analysis is stale</span>'
+                : `<span style="font-size:0.75rem; color:var(--text-muted);">analyzed ${age}</span>`}
+              <span style="display:flex; gap:0.4rem;">
+                <button class="primary" onclick="loadExistingAnalysis('${c.name}')" style="font-size:0.8rem; padding:0.3rem 0.7rem;">
+                  Use Existing
+                </button>
+                <button onclick="analyzeController('${c.name}')" style="font-size:0.8rem; padding:0.3rem 0.7rem;">
+                  Re-analyze
+                </button>
+              </span>
+            </div>
+          </div>
+        `;
+      }
+
+      return `
+        <button class="selection-btn" onclick="analyzeController('${c.name}')">
+          <span class="ctrl-name">${displayName}</span>
+          <span class="ctrl-path">${c.path}</span>
+        </button>
       `;
     }
 
